<resources>
    <!--App info-->
    <string name="app_name">MoviesCrib - Phase 2</string>
    <string name="toolbar_title">Movies Crib</string>
    <string name="toolbar_content_description">Custom toolbar used in the application</string>

    <!--Base links-->
    <string name="tmdb_image_url">https://image.tmdb.org/t/p/w342/</string>
    <string name="tmdb_image_url_large">https://image.tmdb.org/t/p/w500/</string>
    <string name="tmdb_image_url_original">https://image.tmdb.org/t/p/original/</string>

    <!--Keys-->
    <string name="selected_movie_key">SELECTED_MOVIE</string>
    <string name="selected_view_pager_position_key">SELECTED_VIEW_PAGER_POSITION</string>
    <string name="store_offline_key">STORE_OFFLINE_DATA</string>
    <string name ="LIST_STATE_KEY">LIST_STATE_KEY</string>
    <string name="no_movies_error">There are no movies to display.</string>

    <!--View pager & Navigation View titles -->
    <string name="title_most_popular">Most Popular</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_settings">Settings</string>
    <string name="nav_make_selection">Make a selection</string>

    <!--Detail Activity-->
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="heart_icon">Heart icon</string>
    <string name="review_comment_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley</string>
    <string name="review_comment_name">John Bobby:</string>
    <string name="cd_popcorn">Popcorn Image View</string>
    <string name="watch">WATCH ON BROWSER</string>
    <string name="youtube_url">http://www.youtube.com/watch?v=</string>
    <string name="text_plain">text/plain</string>
    <!--Default data to populate the UI on Detail Activity-->
    <string name="poster_title">Avengers</string>
    <string name="poster_content_description">Poster of the movie</string>
    <string name="poster_release_date">11.10.2016</string>
    <string name="poster_info">Thanos is coming</string>
    <string name="poster_vote_average">8.0</string>
    <string name="youtube_icon">Youtube Icon</string>

    <!--Settings Activity-->
    <string name="store_data_title">Store Data</string>
    <string name="store_data_check">Activated</string>
    <string name="store_data_uncheck">Dezactivated</string>

    <!--Error message-->
    <string name="string_ok">Ok</string>
    <string name="string_error_msg">You are not connected to the internet. Try to reconnect to the internet and after come back again. After you connect, go to settings and check STORE DATA to view data when you are offline.</string>
    <string name="string_no_offline_enabled">Please enable STORE DATA from settings and after came back again.</string>
    <string name="string_no_fav_message">Add some movies to favorites and after come back again.</string>
    <string name="string_error_title">Error</string>
    <string name="string_no_fav_title">No favorites</string>
    <string name="reviews">Reviews:</string>
</resources>
