<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_most_popular"
            android:title="@string/title_most_popular"
            android:icon="@drawable/ic_popular"
            />
        <item
            android:id="@+id/nav_top_rated"
            android:title="@string/title_top_rated"
            android:icon="@drawable/ic_arrow_up"/>
        <item
            android:id="@+id/nav_favourites"
            android:title="@string/title_favourites"
            android:icon="@drawable/ic_heart_full"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/title_settings"
            android:icon="@drawable/ic_settings"/>
    </group>
</menu>